Further bug fix in blueprint matcher